--- a/styles/global.css
+++ b/styles/global.css
@@ -8,3 +8,17 @@
         w-screen h-screen;
     }
 }
+
+@media only screen and (min-width: 1100px) {
+    ::-webkit-scrollbar {
+        width: 0.5em;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #404040;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #171717;
+    }
+}
