--- a/styles/global.css
+++ b/styles/global.css
@@ -34,8 +34,10 @@
 
 ::-webkit-scrollbar-track {
     background-color: #404040;
+    border-radius: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb {
     background-color: #171717;
+    border-radius: 0.2rem;
 }
