search_function_implemented

--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -5,7 +5,7 @@
 @layer components {
     
     .site-container {
-        @apply bg-blue-900
+        @apply bg-gray-900
         w-screen h-screen;
     }
 }
